--- a/hosts/server.conf
+++ b/hosts/server.conf
@@ -1,5 +1,5 @@
 server {
-    index index.php;
+    index index.php index.html index.htm;
     server_name server;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
