--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '3'
 # Список наших сервисов (контейнеров)
 services:
-    nginx:
+    nginx-millennium:
         container_name: nginx-millennium
         # используем последний стабильный образ nginx
         build: ./images/nginx
@@ -18,23 +18,23 @@ services:
             - ./hosts/htpasswd:/etc/nginx/htpasswd
         # nginx использует php для обработки запросов, поэтому запускается после него
         depends_on:
-            - php
+            - php-millennium
         networks:
             - main_network
 
-    php:
+    php-millennium:
         container_name: php-millennium
         # у нас свой образ для PHP, указываем путь к нему и говорим что его надо собрать
         build: ./images/php
         # этот образ будет общаться с mysql
         links:
-            - mysql
+            - mysql-millennium
         # монтируем директорию с проектами
         volumes:
             - ./www:/var/www
         networks:
             - main_network
-    mysql:
+    mysql-millennium:
         container_name: mysql-millennium
         build: ./images/mysql
         ports:
@@ -53,17 +53,17 @@ services:
         networks:
             - main_network
 
-    phpmyadmin:
+    phpmyadmin-millennium:
         container_name: phpmyadmin-millennium
         image: phpmyadmin/phpmyadmin
         links:
-            - mysql:db
+            - mysql-millennium:db
         ports:
             - 8765:80
         environment:
             MYSQL_ROOT_PASSWORD: 123456
         depends_on:
-            - mysql
+            - mysql-millennium
         networks:
             - main_network
 
